src/main/webapp/assets/css/styles.css
body {
    background-color: seagreen;
    text-align: center;
    color: white;
    height: 100%;
    display: flex;
    flex-direction: column;

    /* unvisited link */
    a:link {
        color: yellow;
    }

    /* visited link Possibly overshadowed by FrontController
    currently sets all links to visited after clicking any
    link. Will need to be fixed or remove visited altogether
    a:visited {
        color: lightblue;
    }
     */

    /* mouse over link */
    a:hover {
        color: red;
    }

    /* selected link */
    a:active {
        color: purple;
    }
}

ul li {
    display: inline-block;
    margin-right: 10px;
    padding: 5px;
}

.footer {
    position: relative;
    bottom: 0;
    width: 100%;
    height: 25px;
    margin-bottom: 25px;
    margin-top: 25px;
}

#passwordReset {
    margin-left: -25px;
    margin-right: 45px;
}

#createAccount {
    margin-right: 45px;
}

#password {
    margin-left: 20px;
    margin-right: 30px;
}

#loginButton {
    background-color: dimgray;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    margin: 20px 0px 20px 0px;
}

#logoutButton {
    background-color: dimgray;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    margin: 20px 0px 20px 0px;
}

#returnHome {
    background-color: dimgray;
    color: white;
    padding: 10px 20px;
    border: none;
    border-radius: 5px;
    font-size: 16px;
    cursor: pointer;
    margin: 20px 0px 20px 0px;
}

table {
    margin-left: auto;
    margin-right: auto;
    border-spacing: 60px 20px;
    border-collapse: collapse;
    text-align: left;
    background-color: dimgray;
    border: 5px solid darkgray;
}

th, td {
    border: 2px solid darkgray;
    padding: 10px 20px;
}

input, select {
    background-color: dimgray;
    color: white;
}

img {
    max-width: 100%;
}

#loginPic {
    max-width: 25%;
}

